--- a/package.json
+++ b/package.json
@@ -15,15 +15,25 @@
     "format": "prettier --write ."
   },
   "dependencies": {
-    "@base-ui/react": "^1.0.0",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-separator": "^1.1.8",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-toggle": "^1.1.10",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "isbot": "^5.1.31",
     "lucide-react": "^0.561.0",
     "mediainfo.js": "^0.3.6",
     "motion": "^12.23.26",
+    "next-themes": "^0.4.6",
+    "node-fetch": "^3.3.2",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "react-router": "^7.10.0"
+    "react-router": "^7.10.0",
+    "remix-themes": "^2.0.4",
+    "sonner": "^2.0.7",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@cloudflare/vite-plugin": "^1.13.5",
@@ -42,6 +52,7 @@
     "prettier": "^3.7.4",
     "prettier-plugin-tailwindcss": "^0.7.2",
     "tailwindcss": "^4.1.13",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5.9.2",
     "typescript-eslint": "^8.49.0",
     "vite": "^7.1.7",
